--- a/WebPaymentSystem/Views/WebPayment/Index.cshtml
+++ b/WebPaymentSystem/Views/WebPayment/Index.cshtml
@@ -8,7 +8,7 @@
     <script src="~/js/common.js"></script>
     <script src="~/js/AccountService.js"></script>
     <script>
-        $(function () { $("#datepicker").datepicker(); LoadData(); SendAccountServiceRequest() });
+        $(function () { $("#datepicker").datepicker(); LoadData(); });
     </script>
 </head>
 <body>
